--- a/main.mustache
+++ b/main.mustache
@@ -70,7 +70,7 @@
   <h3>
     <img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> Tech Stack
   </h3>
-  <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,git,visualstudio,angular,cpp,mysql" />
+  <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,github,git,visualstudio,cpp,mysql" />
   <br />
   <details>
     <summary> &#9655;</summary>
