--- a/main.mustache
+++ b/main.mustache
@@ -11,7 +11,7 @@
   <img src="https://i.imgur.com/aSVPWXc.png" width="15" /> Spotify Playing
 </h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6">
-  <img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" />
+  <img src="https://spotify-dipan.vercel.app/api/now-playing.svg" width="490" alt="Spotify" />
 </a>
 <h3>
   <img src="https://i.imgur.com/yQHTmCW.png" width="15" /> Where to find me
