--- a/main.mustache
+++ b/main.mustache
@@ -1,7 +1,7 @@
-<img href="https://themagicalmammal.wrapped.run" src="/images/header.gif" />
+<img href="https://themagicalmammal.wrapped.run" src="https://github.com/themagicalmammal/themagicalmammal/blob/master/images/header.gif" />
 <p> I am Dipan, a Python Developer at <a href="https://www.etlsystems.com">
     <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
-  <b>London, England</b>. <img align="right" width="230" height="auto" src="/images/octocat/6.gif">
+  <b>London, England</b>. <img align="right" width="230" height="auto" src="https://github.com/themagicalmammal/themagicalmammal/blob/master/images/octocat/6.gif">
 <h3>
   <img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London
 </h3> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i>
@@ -74,7 +74,7 @@
   <br />
   <details>
     <summary> &#9655;</summary>
-    <img align="right" width="190" height="auto" src="/images/octocat/4.gif">
+    <img align="right" width="190" height="auto" src="https://github.com/themagicalmammal/themagicalmammal/blob/master/images/octocat/4.gif">
     <h3>
       <img src="https://i.imgur.com/x8tsLuE.png" width="15" /> Trophies
     </h3>
@@ -82,7 +82,7 @@
     <br />
     <details>
       <summary> &#9655;</summary>
-      <img align="right" width="190" height="auto" src="/images/octocat/5.gif">
+      <img align="right" width="190" height="auto" src="https://github.com/themagicalmammal/themagicalmammal/blob/master/images/octocat/5.gif">
       <h3>
         <img src="https://i.imgur.com/XJ0hI8P.png" width="15" /> Visitor
       </h3>
