--- a/main.mustache
+++ b/main.mustache
@@ -74,7 +74,7 @@
   <br />
   <details>
     <summary> &#9655;</summary>
-    <img align="right" width="190" height="auto" src="hhttps://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/octocat/4.gif">
+    <img align="right" width="190" height="auto" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/octocat/4.gif">
     <h3>
       <img src="https://i.imgur.com/x8tsLuE.png" width="15" /> Trophies
     </h3>
