--- a/main.mustache
+++ b/main.mustache
@@ -32,7 +32,7 @@
   <img alt="Telegram" width="5.4%" src="https://i.imgur.com/8uCq4fi.png" />
 </a>
 <a href="https://www.kaggle.com/themagicalmammal">
-  <img alt="Kaggle" width="5.4%" src="https://i.imgur.com/6XAnA1Y.png" />
+  <img alt="Kaggle" width="5.4%" src="https://i.imgur.com/vgxCSKx.png" />
 </a>
 <a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/">
   <img alt="XDA" width="5.4%" src="https://i.imgur.com/ZkDQREa.png" />
