--- a/main.mustache
+++ b/main.mustache
@@ -84,6 +84,7 @@
     <br />
     <details>
     <summary> &#9655;</summary>
+    <img align="right" width="190" height="auto" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/octocat/5.gif">
     <h3>
       <img src="https://i.imgur.com/E9Droaq.png" width="15" /> End Credits
     </h3>
