--- a/main.mustache
+++ b/main.mustache
@@ -1,6 +1,6 @@
 <img href="https://themagicalmammal.wrapped.run" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/header.gif" />
 <p> I am Dipan, a Full stack Developer at <a href="https://www.appliedagi.com">
-    <img src="https://i.imgur.com/ofUpTeO.png" width="70" /> </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
+    <img src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/1bf6f139a83612392e50703c08b3f0e269d4f0c5/images/job.svg" width="70" /> </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
   <b>London, England</b>. <img align="right" width="230" height="auto" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/octocat/6.gif">
 <h3>
   <img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London
