fix: linkedin file

--- a/main.mustache
+++ b/main.mustache
@@ -22,7 +22,7 @@
   <a href="https://pypi.org/user/themagicalmammal/">
     <img alt="Pypi" width="5.4%" src="https://i.imgur.com/901ps8h.png" />
   </a>
-  <a href="https://uk.linkedin.com/in/themagicalmammal/">
+  <a href="https://www.linkedin.com/in/dipannanda/">
     <img alt="Linkedin" width="5.4%" src="https://i.imgur.com/Hp2w5wM.png" />
   </a>
   <a href="https://www.reddit.com/user/themagicalmammal/">
