fix: change color

--- a/main.mustache
+++ b/main.mustache
@@ -116,4 +116,4 @@
   <img src="https://i.imgur.com/JgaEjcz.png" width="11" />
   <b> Last Refresh: </b> {{refresh_date}}
 </p>
-<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=f297c0&height=80&section=footer" width="100%" />
+<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=e96d60&height=80&section=footer" width="100%" />
