--- a/main.mustache
+++ b/main.mustache
@@ -1,5 +1,5 @@
 <img href="https://themagicalmammal.wrapped.run" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/header.gif" />
-<p> I am Dipan, a Full-Stack Developer at <a href="https://www.appliedagi.com"> <img src="images/job.svg" width="15" /> <b>Applied AGI</b> </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
+<p> I am Dipan, a Full Stack Developer at <a href="https://www.appliedagi.com"> <img src="images/job.svg" width="15" /> <b>Applied AGI</b> </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" />
   <b>London, England</b>. <img align="right" width="230" height="auto" src="https://raw.githubusercontent.com/themagicalmammal/themagicalmammal/master/images/octocat/6.gif">
 <h3>
   <img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London
