--- a/main.mustache
+++ b/main.mustache
@@ -69,7 +69,7 @@
 <details>
   <summary> &#9655;</summary>
   <h3>
-    <img src="/images/icons/bionic-eye.gif" width="15" /> Tech Stack
+    <img src="https://cdn-icons-png.flaticon.com/512/7134/7134618.png" width="15" /> Tech Stack
   </h3>
   <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,latex,linux,md,bash,github,git,visualstudio,cpp,mysql" width="100%" />
   <br />
